# Memetic-Agents

./: .env.example  .gitignore  README.md  SYSTEM PROMPT.md  pyproject.toml
docs/: Ongoing_Conversations.md  OpenAPI Specification.md  api_server_design.md  communication-feedback-flow-diagram.md  design.md  improvements.md  openapi.json  social-sequence-flow.md
drawio/: memetic-agents-figure-1.drawio  memetic-agents-figure-2.drawio
src/: Project_Scratch_Pad.md  conversation_store.py  live_interact.py  log_config.py  main.py  new_agent_factory.py  run_agents.py  scenario_one.py  scenario_three.py  scenario_two.py  status_tests.py
src/agents/: create_agent_template.py  create_anna_agent.py  create_curio_agent.py  create_franken_agent.py  create_jerry_agent.py  create_reschel_agent.py  create_socraryny_agent.py  create_tom_agent.py  new_agent_factory.py
src/api_server/: README.md  config.py  server.py
src/base_agent/: base_agent.py  comms_manager.py  config.py  example_usage.py  models.py  prompt_dict.py  prompt_library.py  status_manager.py  tool_manager.py  type.py
src/database/: chroma_database.py
src/empirical_agent/: empirical_agent.py  inferentialism.md  updating_memories.md
src/franken_agent/: franken_agent.py  frankenagent_scratchpad.md
src/memetic_agent/: memetic_agent.py  memory_storage.md
src/memory/: memory_manager.py
src/system_prompt_placeholders/: evaluator_prompt.md  give_feedback_prompt.md  prompt_confidence_scores.json  reasoning_prompt.md  reflect_feedback_prompt.md  reflect_memories_prompt.md  self_improvement_prompt.md  sys_prompt.md  (+2 more)
(+83 files in other folders)
